@@ -11,6 +11,11 @@ Package author: Andrei Salnikov
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-01-03
+2009-05-13 Andy Salnikov
+- AppCmdOptList now has value() method wich returns the reference to whole collection
+- The "option file" option has now class AppCmdOptList, can specify multiple option files
+
 Tag: V00-01-02
 2009-03-13 Andy Salnikov
 - new option type AptCmdOptSize
